--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Hope</a>
         <a href="gallery.html">Gallery</a>
-        <a href="blogs.html">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="contact.html" class="text-yellow-500">Contact Us</a>
       </div>
 
@@ -143,7 +143,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Hope</a>
       <a href="gallery.html">Gallery</a>
-      <a href="blogs.html">Blog</a>
+      <a href="blog.html">Blog</a>
       <a href="contact.html" class="text-yellow-500">Contact Us</a>
     </div>
 
