--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html" class="text-yellow-500">Home</a>
                 <a href="about.html">About Hope</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact Us</a>
             </div>
 
@@ -44,7 +44,7 @@
             <a href="index.html" class="text-yellow-500">Home</a>
             <a href="about.html">About Hope</a>
             <a href="gallery.html">Gallery</a>
-            <a href="blogs.html">Blog</a>
+            <a href="blog.html">Blog</a>
             <a href="contact.html">Contact Us</a>
         </div>
 
